--- a/public/locales/en.yml
+++ b/public/locales/en.yml
@@ -12,11 +12,14 @@ en:
     logo_alt: IAS Logo
     home: Home
     welcome_head: ''
-    welcome_message:  <p><span class="large_it serif">Explore collection guides, finding aids, and inventories to locate unique materials in  special collections and archives.</span></p>
+    welcome_message:  <p><span class="large_it serif">Search this database of collection inventories to locate original documents from the history of the Institute for Advanced Study.</span></p>
     welcome_page_title: Shelby White and Leon Levy Archives Center
-    welcome_about: "<h4>About Archival Collections</h4>      <div>     The Shelby White and Leon Levy Archives Center serves as a home for collective memory at the Institute for Advanced Study. The Center collects, preserves, and provides access to primary source documents that represent the history of the Institute and its robust community of scholars. This website allows users to explore these holdings and request access to these collections. We welcome guests to search, discover, and engage with this website and to provide feedback to the Archives Center at <a href='mailto:archives@ias.edu'>archives@ias.edu</a>.<br>All descriptive information and metadata made available in this database is licensed under a CC0 1.0 Universal (CCO 1.0) Public Domain Dedication. This means that anyone may copy, modify, and distribute this descriptive metadata without restriction or permission. More information is available on the Creative Commons website: <a href='https://creativecommons.org/publicdomain/zero/1.0/'>CC0 1.0 Universal (CC0 1.0) Public Domain Dedication</a>
+    welcome_about: "<h4>About this Website</h4>      <div> This website allows researchers to explore the Institute for Advanced Study archives and special collections. These materials consist of primary source documentation created by the Institute for Advanced Study community of scholars. Materials include original documents, audiovisual recordings, photographs, and ephemera from Institute Faculty, Members, Visitors, and Administration. This database provides users access to collection inventories that help users search the contents of these collections. <br/><br/>Researchers hoping to access these collections in person or request digital copies of these materials are welcome to reach out to the Shelby White and Leon Levy Archives Center for more information at <a href='mailto:archives@ias.edu' >archives@ias.edu</a>.   <br/><br/> 
+    All collection inventories made available in this database are licensed under a CC0 1.0 Universal (CCO 1.0) Public Domain Dedication. Anyone may copy, modify, and distribute this descriptive data without restriction or permission. More information is available on the <a href='https://creativecommons.org/publicdomain/zero/1.0/' target='new' class='under'>Creative Commons website</a>: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication.
+      </div>"
+    welcome_requests: "<h4>Requesting Access to Archival Materials</h4> <div>Where possible, the Shelby White and Leon Levy Archives Center will provide links to digitized archival materials that have already been made available via Albert, the Institute for Advanced Study's online repository for digital materials. For researchers seeking access to materials that have not yet been digitized, the Shelby White and Leon Levy Archives Center is pleased to provide researchers access to materials by facilitating both in-person visits and digital requests. <br/><br/>The Shelby White and Leon Levy Archives Center is open daily from Monday to Friday from 9 a.m. to 5 p.m. for researchers to schedule appointments to access materials. For researchers that are not able to travel to the Archives Center in-person, we are also happy to offer our assistance in providing digital reproductions of archival materials on demand. <br/><br/>
+      Researchers that would like to schedule an appointment to visit our reading room or request scans of holdings are welcome to contact the Shelby White and Leon Levy Archives Center at <a href='mailto:archives@ias.edu' class='under'>archives@ias.edu</a>. 
      </div>"
-    welcome_requests: "<h4>Requesting Materials</h4>     <div>On the homepage for each collection, users will find a link to &quot;request&quot; access to materials. Wherever possible, we have provided links to collection materials that archivists have digitized and made available via <a href='https://albert.ias.edu'>Albert</a>, the Institute's Digital Repository. However, in many cases, only portions or partial selections of a collection are available online. The &quot;request&quot; button allows users to request in-person access to original materials and entire collections.<br><br>     When requesting materials, please be sure to consult the <a href='https://ias.edu/library/archives'>Shelby White and Leon Levy Archives Center website</a> to learn more about how to access the archives and book appointments for on-site visits to the Institute campus.    </div>"
   
     
   
@@ -26,7 +29,7 @@ en:
     feedback: Send Feedback
     help: Help
     accessibility: Accessibility
-    copyright: © <b>2020</b> 
+    copyright: © <b>2022</b> 
     harmful_language_statement: Harmful Language Statement
     privacy: Privacy
 
@@ -86,12 +89,18 @@ en:
   
   
 
+
   resource:
+    _singular: Archival Collection
+    _plural: Archival Collections
     _public:
       finding_aid:
         head: Administrative Information
         ead_id: EAD ID
 
+  classification:
+    _singular: Institutional Record
+    _plural: Institutional Records
   digital_object:
     _public:
        link: External link to digital material
@@ -99,6 +108,13 @@ en:
        details:
          _singular: (1 item)
          _plural: "(%{ct} items)"
+  record_group:
+    _singular: Institutional Record
+    _plural: Institutional Records
+  inherit:
+    collection: Archival Collection
+    recordgrp: Institutional Record
+
   views:
     _shared:
        digital_object_link: "%{name}"
@@ -113,6 +129,9 @@ en:
     archival_record_level:
       unspecified: Item
       untitled: Untitled
+      collection: Archival Collection
+      recordgrp: Institutional Record
+
     _note_types:
       odd: General note
       abstract: Overview
